haproxy-infra.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: haproxy-controller
