haproxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-svc
  namespace: haproxy-controller
  labels:
    run: haproxy-ingress
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    run: haproxy-ingress
