ngnex-service-infra.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment
  annotations:
    haproxy.org/check: "enabled"
    haproxy.org/forwarded-for: "enabled"
    haproxy.org/load-balance: "roundrobin"
spec:
  selector:
    app: nginx
  ports:
  - name: port-1
    port: 80
    protocol: TCP
    targetPort: 8080
