ngnex-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - name: http
  	port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
