haproxy-ingress_2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: haproxy-ingress
spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
