ingress-infra.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: labo-ingress
spec:
  rules:
  - host: infra.web
    http:
      paths:
      - path:
        backend:
          serviceName: nginx
          servicePort: 80
